April updated data

--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020JUN</th>\n",
        "      <th>2020JUL</th>\n",
        "      <th>2020AUG</th>\n",
        "      <th>2020SEP</th>\n",
@@ -105,6 +104,7 @@
        "      <th>2021JAN</th>\n",
        "      <th>2021FEB</th>\n",
        "      <th>2021MAR</th>\n",
+       "      <th>2021APR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -129,8 +129,8 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,7 +145,6 @@
        "      <td>0.23</td>\n",
        "      <td>0.61</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.24</td>\n",
        "      <td>1.48</td>\n",
        "      <td>1.63</td>\n",
        "      <td>0.84</td>\n",
@@ -155,6 +154,7 @@
        "      <td>2.19</td>\n",
        "      <td>1.20</td>\n",
        "      <td>5.34</td>\n",
+       "      <td>1.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -170,7 +170,6 @@
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.04</td>\n",
@@ -179,6 +178,7 @@
        "      <td>0.11</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.10</td>\n",
+       "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -193,7 +193,6 @@
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.06</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -203,6 +202,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -230,7 +230,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 294 columns</p>\n",
+       "<p>5 rows × 295 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,31 +241,31 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  IM Imports     0.02   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUN  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUL  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.24   \n",
+       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.48   \n",
        "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.00   \n",
-       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.06   \n",
+       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  \\\n",
-       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
-       "1     1.48     1.63     0.84     1.02     1.46     1.18     2.19     1.20   \n",
-       "2     0.00     0.02     0.11     0.04     0.12     0.10     0.11     0.24   \n",
+       "   2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  \\\n",
+       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.07   \n",
+       "1     1.63     0.84     1.02     1.46     1.18     2.19     1.20     5.34   \n",
+       "2     0.02     0.11     0.04     0.12     0.10     0.11     0.24     0.10   \n",
        "3     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021MAR  \n",
-       "0     0.07  \n",
-       "1     5.34  \n",
-       "2     0.10  \n",
-       "3     0.00  \n",
+       "   2021APR  \n",
+       "0     0.00  \n",
+       "1     1.54  \n",
+       "2     0.12  \n",
+       "3     0.02  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 294 columns]"
+       "[5 rows x 295 columns]"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "        03 Fish & shellfish         1997-01-01    690000.0"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,13 +507,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "file = \".\\\\data\"+ \"\\\\UK-imports.parquet\"\n",
     "\n",
     "foo = pq.read_table(file).to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>imports</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>COMMODITY</th>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
+       "      <th>2020-12-01</th>\n",
+       "      <td>3.967900e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>3.095700e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>3.241000e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>3.905800e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>3.616600e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                imports\n",
+       "COUNTRY     COMMODITY          time                    \n",
+       "Whole world Total (ex. metals) 2020-12-01  3.967900e+10\n",
+       "                               2021-01-01  3.095700e+10\n",
+       "                               2021-02-01  3.241000e+10\n",
+       "                               2021-03-01  3.905800e+10\n",
+       "                               2021-04-01  3.616600e+10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -540,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
