--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -95,7 +95,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020JUL</th>\n",
        "      <th>2020AUG</th>\n",
        "      <th>2020SEP</th>\n",
        "      <th>2020OCT</th>\n",
@@ -105,6 +104,7 @@
        "      <th>2021FEB</th>\n",
        "      <th>2021MAR</th>\n",
        "      <th>2021APR</th>\n",
+       "      <th>2021MAY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -128,9 +128,9 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,16 +145,16 @@
        "      <td>0.23</td>\n",
        "      <td>0.61</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.48</td>\n",
        "      <td>1.63</td>\n",
        "      <td>0.84</td>\n",
        "      <td>1.02</td>\n",
        "      <td>1.46</td>\n",
        "      <td>1.18</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>5.34</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>5.39</td>\n",
        "      <td>1.54</td>\n",
+       "      <td>1.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,7 +169,6 @@
        "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.04</td>\n",
@@ -179,6 +178,7 @@
        "      <td>0.24</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.12</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -201,8 +201,8 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -230,7 +230,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 295 columns</p>\n",
+       "<p>5 rows × 296 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,28 +241,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  IM Imports     0.02   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUL  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020AUG  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.48   \n",
-       "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.00   \n",
+       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.63   \n",
+       "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.02   \n",
        "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  \\\n",
-       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.07   \n",
-       "1     1.63     0.84     1.02     1.46     1.18     2.19     1.20     5.34   \n",
-       "2     0.02     0.11     0.04     0.12     0.10     0.11     0.24     0.10   \n",
-       "3     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
+       "   2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  \\\n",
+       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.07     0.00   \n",
+       "1     0.84     1.02     1.46     1.18     2.17     1.19     5.39     1.54   \n",
+       "2     0.11     0.04     0.12     0.10     0.11     0.24     0.10     0.12   \n",
+       "3     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.02   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021APR  \n",
-       "0     0.00  \n",
-       "1     1.54  \n",
-       "2     0.12  \n",
-       "3     0.02  \n",
+       "   2021MAY  \n",
+       "0     0.07  \n",
+       "1     1.25  \n",
+       "2     0.02  \n",
+       "3     0.00  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 295 columns]"
+       "[5 rows x 296 columns]"
       ]
      },
      "execution_count": 5,
@@ -557,24 +557,24 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
-       "      <th>2020-12-01</th>\n",
-       "      <td>3.967900e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-01-01</th>\n",
-       "      <td>3.095700e+10</td>\n",
+       "      <td>3.074200e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-02-01</th>\n",
-       "      <td>3.241000e+10</td>\n",
+       "      <td>3.221400e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-03-01</th>\n",
-       "      <td>3.905800e+10</td>\n",
+       "      <td>3.889900e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-04-01</th>\n",
-       "      <td>3.616600e+10</td>\n",
+       "      <td>3.605700e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-01</th>\n",
+       "      <td>3.495200e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -583,11 +583,11 @@
       "text/plain": [
        "                                                imports\n",
        "COUNTRY     COMMODITY          time                    \n",
-       "Whole world Total (ex. metals) 2020-12-01  3.967900e+10\n",
-       "                               2021-01-01  3.095700e+10\n",
-       "                               2021-02-01  3.241000e+10\n",
-       "                               2021-03-01  3.905800e+10\n",
-       "                               2021-04-01  3.616600e+10"
+       "Whole world Total (ex. metals) 2021-01-01  3.074200e+10\n",
+       "                               2021-02-01  3.221400e+10\n",
+       "                               2021-03-01  3.889900e+10\n",
+       "                               2021-04-01  3.605700e+10\n",
+       "                               2021-05-01  3.495200e+10"
       ]
      },
      "execution_count": 19,
