--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -95,7 +95,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020AUG</th>\n",
        "      <th>2020SEP</th>\n",
        "      <th>2020OCT</th>\n",
        "      <th>2020NOV</th>\n",
@@ -105,6 +104,7 @@
        "      <th>2021MAR</th>\n",
        "      <th>2021APR</th>\n",
        "      <th>2021MAY</th>\n",
+       "      <th>2021JUN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,10 +127,10 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,7 +145,6 @@
        "      <td>0.23</td>\n",
        "      <td>0.61</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.63</td>\n",
        "      <td>0.84</td>\n",
        "      <td>1.02</td>\n",
        "      <td>1.46</td>\n",
@@ -153,8 +152,9 @@
        "      <td>2.17</td>\n",
        "      <td>1.19</td>\n",
        "      <td>5.39</td>\n",
-       "      <td>1.54</td>\n",
-       "      <td>1.25</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,7 +169,6 @@
        "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.02</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.12</td>\n",
@@ -179,6 +178,7 @@
        "      <td>0.10</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -200,9 +200,9 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -230,7 +230,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 296 columns</p>\n",
+       "<p>5 rows × 297 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,28 +241,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  IM Imports     0.02   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020AUG  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020SEP  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.63   \n",
-       "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.02   \n",
+       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     0.84   \n",
+       "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.11   \n",
        "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  \\\n",
-       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.07     0.00   \n",
-       "1     0.84     1.02     1.46     1.18     2.17     1.19     5.39     1.54   \n",
-       "2     0.11     0.04     0.12     0.10     0.11     0.24     0.10     0.12   \n",
-       "3     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.02   \n",
+       "   2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  2021MAY  \\\n",
+       "0     0.00     0.00     0.00     0.00     0.00     0.07     0.00     0.07   \n",
+       "1     1.02     1.46     1.18     2.17     1.19     5.39     1.53     1.24   \n",
+       "2     0.04     0.12     0.10     0.11     0.24     0.10     0.12     0.02   \n",
+       "3     0.00     0.00     0.00     0.00     0.00     0.00     0.02     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021MAY  \n",
-       "0     0.07  \n",
-       "1     1.25  \n",
-       "2     0.02  \n",
-       "3     0.00  \n",
+       "   2021JUN  \n",
+       "0     0.00  \n",
+       "1     1.34  \n",
+       "2     0.00  \n",
+       "3     0.04  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 296 columns]"
+       "[5 rows x 297 columns]"
       ]
      },
      "execution_count": 5,
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,94 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>imports</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>COMMODITY</th>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Belgium</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>44340000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>00 Live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>70000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01 Meat &amp; meat preparations</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>6000000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>02 Dairy products &amp; eggs</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>5340000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>03 Fish &amp; shellfish</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>690000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   imports\n",
-       "COUNTRY COMMODITY                   time                  \n",
-       "Belgium 0 Food & live animals       1997-01-01  44340000.0\n",
-       "        00 Live animals             1997-01-01     70000.0\n",
-       "        01 Meat & meat preparations 1997-01-01   6000000.0\n",
-       "        02 Dairy products & eggs    1997-01-01   5340000.0\n",
-       "        03 Fish & shellfish         1997-01-01    690000.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,83 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>imports</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>COMMODITY</th>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
-       "      <th>2021-01-01</th>\n",
-       "      <td>3.074200e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-01</th>\n",
-       "      <td>3.221400e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-01</th>\n",
-       "      <td>3.889900e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-04-01</th>\n",
-       "      <td>3.605700e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-05-01</th>\n",
-       "      <td>3.495200e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                imports\n",
-       "COUNTRY     COMMODITY          time                    \n",
-       "Whole world Total (ex. metals) 2021-01-01  3.074200e+10\n",
-       "                               2021-02-01  3.221400e+10\n",
-       "                               2021-03-01  3.889900e+10\n",
-       "                               2021-04-01  3.605700e+10\n",
-       "                               2021-05-01  3.495200e+10"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.tail()"
    ]
