--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -95,7 +95,6 @@
        "      <th>2018JUN</th>\n",
        "      <th>2018JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2021JAN</th>\n",
        "      <th>2021FEB</th>\n",
        "      <th>2021MAR</th>\n",
        "      <th>2021APR</th>\n",
@@ -105,6 +104,7 @@
        "      <th>2021AUG</th>\n",
        "      <th>2021SEP</th>\n",
        "      <th>2021OCT</th>\n",
+       "      <th>2021NOV</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -122,10 +122,10 @@
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -145,16 +145,16 @@
        "      <td>0.93</td>\n",
        "      <td>0.79</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.22</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>5.41</td>\n",
-       "      <td>1.54</td>\n",
-       "      <td>1.18</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>5.34</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.17</td>\n",
        "      <td>1.32</td>\n",
        "      <td>1.52</td>\n",
        "      <td>1.76</td>\n",
-       "      <td>1.33</td>\n",
+       "      <td>1.34</td>\n",
        "      <td>1.03</td>\n",
+       "      <td>1.38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,7 +169,6 @@
        "      <td>0.12</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.11</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.12</td>\n",
@@ -179,6 +178,7 @@
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -195,13 +195,13 @@
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.05</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -222,15 +222,15 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
+       "<p>5 rows × 50 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,28 +241,28 @@
        "3  0 Food & live animals   AG Antigua and Barbuda  IM Imports     0.00   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   2018FEB  2018MAR  2018APR  2018MAY  2018JUN  2018JUL  ...  2021JAN  \\\n",
+       "   2018FEB  2018MAR  2018APR  2018MAY  2018JUN  2018JUL  ...  2021FEB  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.71     8.59     1.43     0.85     0.93     0.79  ...     2.22   \n",
-       "2     0.00     0.00     0.00     0.02     0.12     0.00  ...     0.11   \n",
+       "1     0.71     8.59     1.43     0.85     0.93     0.79  ...     1.21   \n",
+       "2     0.00     0.00     0.00     0.02     0.12     0.00  ...     0.24   \n",
        "3     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2021FEB  2021MAR  2021APR  2021MAY  2021JUN  2021JUL  2021AUG  2021SEP  \\\n",
-       "0     0.00     0.07     0.00     0.07     0.00     0.00     0.00     0.00   \n",
-       "1     1.20     5.41     1.54     1.18     1.32     1.52     1.76     1.33   \n",
-       "2     0.24     0.10     0.12     0.02     0.00     0.03     0.01     0.00   \n",
-       "3     0.00     0.00     0.02     0.00     0.04     0.00     0.00     0.05   \n",
-       "4     0.00     0.00     0.00     0.00     0.00     0.03     0.00     0.00   \n",
+       "   2021MAR  2021APR  2021MAY  2021JUN  2021JUL  2021AUG  2021SEP  2021OCT  \\\n",
+       "0     0.07     0.00     0.07     0.00     0.00     0.00     0.00     0.00   \n",
+       "1     5.34     1.53     1.17     1.32     1.52     1.76     1.34     1.03   \n",
+       "2     0.10     0.12     0.02     0.00     0.03     0.01     0.00     0.00   \n",
+       "3     0.00     0.02     0.00     0.04     0.00     0.00     0.05     0.00   \n",
+       "4     0.00     0.00     0.00     0.00     0.03     0.00     0.00     0.00   \n",
        "\n",
-       "   2021OCT  \n",
+       "   2021NOV  \n",
        "0     0.00  \n",
-       "1     1.03  \n",
-       "2     0.00  \n",
+       "1     1.38  \n",
+       "2     0.09  \n",
        "3     0.00  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 49 columns]"
+       "[5 rows x 50 columns]"
       ]
      },
      "execution_count": 5,
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -485,43 +485,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133303</th>\n",
-       "      <td>Whole world</td>\n",
-       "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>3.856800e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133304</th>\n",
+       "      <th>136201</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
        "      <td>2021-07-01</td>\n",
-       "      <td>3.898800e+10</td>\n",
+       "      <td>3.907300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133305</th>\n",
+       "      <th>136202</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
        "      <td>2021-08-01</td>\n",
-       "      <td>3.606200e+10</td>\n",
+       "      <td>3.616700e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133306</th>\n",
+       "      <th>136203</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
        "      <td>2021-09-01</td>\n",
-       "      <td>4.264700e+10</td>\n",
+       "      <td>4.276100e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133307</th>\n",
+       "      <th>136204</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
        "      <td>2021-10-01</td>\n",
-       "      <td>4.246100e+10</td>\n",
+       "      <td>4.220100e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136205</th>\n",
+       "      <td>Whole world</td>\n",
+       "      <td>Total (ex. metals)</td>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>4.517900e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>133308 rows × 4 columns</p>\n",
+       "<p>136206 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -532,16 +532,16 @@
        "3           Belgium     02 Dairy products & eggs 2018-01-01  1.761000e+07\n",
        "4           Belgium          03 Fish & shellfish 2018-01-01  1.200000e+06\n",
        "...             ...                          ...        ...           ...\n",
-       "133303  Whole world           Total (ex. metals) 2021-06-01  3.856800e+10\n",
-       "133304  Whole world           Total (ex. metals) 2021-07-01  3.898800e+10\n",
-       "133305  Whole world           Total (ex. metals) 2021-08-01  3.606200e+10\n",
-       "133306  Whole world           Total (ex. metals) 2021-09-01  4.264700e+10\n",
-       "133307  Whole world           Total (ex. metals) 2021-10-01  4.246100e+10\n",
+       "136201  Whole world           Total (ex. metals) 2021-07-01  3.907300e+10\n",
+       "136202  Whole world           Total (ex. metals) 2021-08-01  3.616700e+10\n",
+       "136203  Whole world           Total (ex. metals) 2021-09-01  4.276100e+10\n",
+       "136204  Whole world           Total (ex. metals) 2021-10-01  4.220100e+10\n",
+       "136205  Whole world           Total (ex. metals) 2021-11-01  4.517900e+10\n",
        "\n",
-       "[133308 rows x 4 columns]"
+       "[136206 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>863604 rows × 4 columns</p>\n",
+       "<p>866502 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -688,10 +688,10 @@
        "730294  Whole world           Total (ex. metals) 2017-11-01  4.213700e+10\n",
        "730295  Whole world           Total (ex. metals) 2017-12-01  3.663500e+10\n",
        "\n",
-       "[863604 rows x 4 columns]"
+       "[866502 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -750,24 +750,24 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
-       "      <th>2021-06-01</th>\n",
-       "      <td>3.856800e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-07-01</th>\n",
-       "      <td>3.898800e+10</td>\n",
+       "      <td>3.907300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-08-01</th>\n",
-       "      <td>3.606200e+10</td>\n",
+       "      <td>3.616700e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-09-01</th>\n",
-       "      <td>4.264700e+10</td>\n",
+       "      <td>4.276100e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-01</th>\n",
-       "      <td>4.246100e+10</td>\n",
+       "      <td>4.220100e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-01</th>\n",
+       "      <td>4.517900e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -776,14 +776,14 @@
       "text/plain": [
        "                                                imports\n",
        "COUNTRY     COMMODITY          time                    \n",
-       "Whole world Total (ex. metals) 2021-06-01  3.856800e+10\n",
-       "                               2021-07-01  3.898800e+10\n",
-       "                               2021-08-01  3.606200e+10\n",
-       "                               2021-09-01  4.264700e+10\n",
-       "                               2021-10-01  4.246100e+10"
+       "Whole world Total (ex. metals) 2021-07-01  3.907300e+10\n",
+       "                               2021-08-01  3.616700e+10\n",
+       "                               2021-09-01  4.276100e+10\n",
+       "                               2021-10-01  4.220100e+10\n",
+       "                               2021-11-01  4.517900e+10"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "                              1997-05-01  57810000.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
